# quick-yoga

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp
build_macos/CMakeHello.build/Debug/ALL_BUILD.build/: Script-86EECFEB9A3B4260A7449488.sh  dgph
build_macos/CMakeHello.build/Debug/ZERO_CHECK.build/: Script-FB1EFCFA88E74A29A7A38D12.sh  dgph
build_macos/CMakeHello.build/Debug/cmake_hello.build/: dgph
build_macos/CMakeHello.build/Debug/cmake_hello.build/Objects-normal/x86_64/: cmake_hello.LinkFileList
build_macos/CMakeHello.xcodeproj/: project.pbxproj
build_macos/lib/math/CMakeHello.build/Debug/math.build/: dgph
build_macos/lib/math/CMakeHello.build/Debug/math.build/Objects-normal/x86_64/: math.LinkFileList
build_macos/lib/quickjs-cmake/: get_quickjs.cmake
build_macos/lib/quickjs-cmake/CMakeHello.build/Debug/quickjs.build/: Script-419469A18944421584F94A8E.sh  dgph
build_macos/lib/quickjs-cmake/CMakeHello.build/Debug/quickjs.build/Objects-normal/x86_64/: quickjs.LinkFileList
build_macos/lib/quickjs-cmake/quickjs.xcodeproj/: project.pbxproj
build_macos/lib/yoga/CMakeHello.build/Debug/yogacore.build/: dgph
build_macos/lib/yoga/CMakeHello.build/Debug/yogacore.build/Objects-normal/x86_64/: yogacore.LinkFileList
build_make/lib/quickjs-cmake/: get_quickjs.cmake  quickjs-extra.tar.xz
includes/: version_1_73_0.html
lib/math/: CMakeLists.txt  operations.cpp  operations.hpp  plop.cpp  plop.hpp
